# depconvolver

./: .gitmodules  ARC.cpp  CMakeLists.txt  DepConvolver.cpp  Filter.txt  ThreadedDSP.cpp  ThreadedDSP.hpp  ats_core  da_authoring.cpp  da_controller.cpp  da_controller4.cpp  daes67
matlab/: 20241020_HERVICLE_XOVER.txt  20241105_HERVICLE_XOVER.mat  ARCH_RESOLUTION.m  ARCH_RESOLUTION_45.m  AUTHORING.m  Analysis.m  Calibrate.m  Capture.m  PAN_AMP.m  PAN_AMP2.m  PAN_JUMP.m  PAN_POW.m  PAN_TESTING.m  Passthrough.m  PrintFilter2.m  REVERB.m  Remap.m  SETUP_20241027.m  SETUP_20241105.m  Signal.m  WIDTH_JUMP.m  playrec.mexw64
